# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@llvm-project//mlir:tblgen.bzl", "gentbl_filegroup", "td_library")

package(default_visibility = ["//visibility:public"])

td_library(
    name = "SubstraitOpsPyTdFiles",
    srcs = [
        "substrait_mlir/dialects/SubstraitOps.td",
    ],
    deps = [
        "//:MLIRSubstraitOpsIncGenTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
    ],
)

gentbl_filegroup(
    name = "SubstraitOpsPyGen",
    tbl_outs = [
        (
            [
                "-gen-python-op-bindings",
                "-bind-dialect=substrait",
            ],
            "substrait_mlir/dialects/_substrait_ops_gen.py",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "substrait_mlir/dialects/SubstraitOps.td",
    deps = [
        ":SubstraitOpsPyTdFiles",
    ],
)

filegroup(
    name = "SubstraitOpsPyFiles",
    srcs = [
        "substrait_mlir/dialects/substrait.py",
        ":SubstraitOpsPyGen",
    ],
)

# These flags are needed for pybind11 to work.
PYBIND11_COPTS = [
    "-fexceptions",
    "-frtti",
]

PYBIND11_FEATURES = [
    # Cannot use header_modules (parse_headers feature fails).
    "-use_header_modules",
]

cc_binary(
    name = "_substraitDialects.so",
    srcs = ["SubstraitDialects.cpp"],
    copts = PYBIND11_COPTS,
    features = PYBIND11_FEATURES,
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//:MLIRSubstraitCAPI",
        "@llvm-project//mlir:CAPIIR",
        "@llvm-project//mlir:MLIRBindingsPythonNanobindHeadersAndDeps",
        "@nanobind",
    ],
)
